--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-layout-text"
-version = "2.0.0-alpha.2"
+version = "2.0.0"
 authors = ["Christoph Werner <christoph@codepunkt.de>"]
 edition = "2018"
 repository = ""
