--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "wasm-layout-text"
-version = "2.0.0"
 authors = ["Christoph Werner <christoph@codepunkt.de>"]
+description = "Layouts text and returns the result as an UInt8Array of pixels"
 edition = "2018"
-repository = ""
-description = ""
 license = "MIT"
+name = "wasm-layout-text"
+repository = "https://github.com/codepunkt/wasm-layout-text"
+version = "3.0.0"
 
 [lib]
 crate-type = ["cdylib"]
@@ -14,35 +14,34 @@ crate-type = ["cdylib"]
 default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
-wasm-bindgen = "0.2.69"
-rusttype = "0.8.2"
-image = { version = "0.22", default-features = false, features = ["png_codec"] }
 glyph_brush_layout = "0.1.8"
-serde-wasm-bindgen = "0.1.3"
+image = {version = "0.22", default-features = false, features = ["png_codec"]}
 js-sys = "0.3.33"
+rusttype = "0.8.2"
+wasm-bindgen = "0.2.69"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
-console_error_panic_hook = { version = "0.1.6", optional = true }
+console_error_panic_hook = {version = "0.1.6", optional = true}
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
-wee_alloc = { version = "0.4.2", optional = true }
+wee_alloc = {version = "0.4.2", optional = true}
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.19"
 
 [dependencies.web-sys]
-version = "0.3.4"
 features = [
   'console',
   'Node',
 ]
+version = "0.3.4"
 
 # Optimize for speed in release build
 [profile.release]
